<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">exam</string>
    <string name="enter_name">Введите название автомойки</string>
    <string name="enter_boxcount">Введите количество боксов</string>
    <string name="enter_button">Принять</string>
    <string name="typename">Автомойка у дяди Вани</string>
    <string name="typeboxcount">3</string>
    <string name="toastalldigits">Количество боксов должно быть числом!</string>
    <string name="toastnonnull">Название не должно быть пустым</string>
    <string name="mark">mark</string>
    <string name="color">color</string>
    <string name="time">time</string>
    <string name="box">box</string>
    <string name="car">car</string>
    <string name="number">number</string>
    <string name="phone">phone</string>
    <string name="setmark">Марка: </string>
    <string name="setcolor">Цвет: </string>
    <string name="setnumber">Гос. номер: </string>
    <string name="setphone">Номер телефона: </string>
    <string name="settime">Время: </string>
    <string name="setbox">Бокс: </string>
    <string name="addcar">Добавить</string>
    <string name="writemark">Название автомобиля</string>
    <string name="writecolor">Цвет автомобиля</string>
    <string name="writephone">Номер телефона</string>
    <string name="writenumber">Гос. номер</string>
    <array name="times">
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
    </array>
</resources>
